# bot-george

./: .gitignore  Cargo.toml  attach.sh  diesel.toml  run-release.sh  run.sh
etc/: logging-confidential.yml  logging-debug.yml
migrations/2020-10-06-180329_create_admins/: up.sql
migrations/2020-10-07-200403_create_users/: up.sql
migrations/2020-10-07-210509_create_roles/: up.sql
migrations/2020-10-24-205401_create_channel_modes/: down.sql  up.sql
src/bot-george/: Cargo.toml  build.rs  commands.rs  config.rs  db.rs  error.rs  event_handler.rs  logging.rs  main.rs  motd.txt  schema.rs  util.rs
src/bot-george/bot/: channels.rs  mod.rs  roles.rs  schedule.rs
src/bot-george/db/: mod.rs  models.rs
src/bot-george/models/: admin.rs  mod.rs
src/docbot/: Cargo.toml  lib.rs
src/docbot-derive/: Cargo.toml  attrs.rs  docs.rs  lib.rs  opts.rs  trie.rs
src/docbot-derive/bits/: help.rs  id.rs  mod.rs  parse.rs
