[package]
name = "bot-george"
version = "0.1.0"
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"

[[bin]]
name = "bot-george"
path = "main.rs"

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
diesel = { version = "1.4.5", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.6"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.3.9"
serde = "1.0.116"
serenity = "0.9.0-rc.2"
toml = "0.5.6"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "signal"] }

# TODO
[dependencies.log4rs]
version = "1.0.0-alpha-2"
git = "https://github.com/estk/log4rs.git"
branch = "devel"
