[package]
name = "bot-george"
version = "0.1.0"
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "bot-george"
path = "main.rs"

[dependencies]
anyhow = "1.0.32"
atty = "0.2.14"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "uuidv07"] }
diesel_migrations = "1.4.0"
dispose = "0.2.0"
docbot = { path = "../docbot", version = "0.1.0" }
dotenv = "0.15.0"
futures = "0.3.6"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.4.1"
serde = "1.0.116"
thiserror = "1.0.21"
toml = "0.5.6"
tokio = { version = "0.2.22", features = ["macros", "rt-core", "rt-threaded", "signal"] }
uuid = { version = "0.8.1", features = ["v4"] }

# TODO
[dependencies.log4rs]
version = "1.0.0-alpha-2"
git = "https://github.com/estk/log4rs.git"
branch = "devel"

[dependencies.serenity]
version = "0.9.0-rc.2"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "http",
  "utils",
  "rustls_backend",
]
